fix(19): revise 19-01 plan for dynamic fallback redirect per CONTEXT.md

--- a/.planning/phases/19-permission-enforcement/19-01-PLAN.md
+++ b/.planning/phases/19-permission-enforcement/19-01-PLAN.md
@@ -6,6 +6,7 @@ wave: 1
 depends_on: []
 files_modified:
   - src/lib/permissions.ts
+  - src/components/RequireRole.tsx
   - src/App.tsx
   - src/components/SideMenu.tsx
 autonomous: true
@@ -17,16 +18,19 @@ requirements:
 must_haves:
   truths:
     - "Permission matrix contains 12 actions: create_well, edit_well, delete_well, manage_allocations, record_reading, edit_reading, delete_reading, view_wells, manage_users, manage_farm, manage_invites, cross_farm_access"
-    - "Meter checker navigating to /wells/:id/edit is redirected to the map page"
-    - "Meter checker navigating to /wells/:id/allocations is redirected to the map page"
-    - "Meter checker navigating to /users is redirected to the map page"
+    - "Meter checker navigating to /wells/:id/edit is redirected to the well detail page (/wells/:id)"
+    - "Meter checker navigating to /wells/:id/allocations is redirected to the well detail page (/wells/:id)"
+    - "Meter checker navigating to /users is redirected to the map page (/)"
     - "Users nav item is hidden for meter checkers in the side menu"
   artifacts:
     - path: "src/lib/permissions.ts"
       provides: "12-action permission matrix with manage_wells and view_members removed"
       contains: "edit_well"
+    - path: "src/components/RequireRole.tsx"
+      provides: "Enhanced RequireRole with dynamic fallbackPath via useParams"
+      contains: "useParams"
     - path: "src/App.tsx"
-      provides: "RequireRole route guards on well edit, allocations, and users routes"
+      provides: "RequireRole route guards on well edit, allocations, and users routes with dynamic fallback"
       contains: "RequireRole"
     - path: "src/components/SideMenu.tsx"
       provides: "Users nav item filtered by manage_users action"
@@ -46,7 +50,7 @@ must_haves:
 Replace the coarse permission matrix with the 12-action matrix from user decisions, add RequireRole route guards for well editing, allocation management, and user management routes, and hide the Users nav item for meter checkers.
 
 Purpose: Establish the permission foundation and route-level access control so meter checkers cannot reach restricted pages.
-Output: Updated permissions.ts with new action set, App.tsx with three new route guards, SideMenu.tsx with Users item gated.
+Output: Updated permissions.ts with new action set, RequireRole.tsx with dynamic fallback support, App.tsx with three new route guards (well routes redirect to well detail, users route redirects to map), SideMenu.tsx with Users item gated.
 </objective>
 
 <execution_context>
@@ -98,31 +102,56 @@ Replace the ACTIONS array and PERMISSION_MATRIX in `src/lib/permissions.ts` with
 </task>
 
 <task type="auto">
-  <name>Task 2: Add route guards and gate Users nav item</name>
-  <files>src/App.tsx, src/components/SideMenu.tsx</files>
+  <name>Task 2: Enhance RequireRole with dynamic fallback, add route guards, gate Users nav item</name>
+  <files>src/components/RequireRole.tsx, src/App.tsx, src/components/SideMenu.tsx</files>
   <action>
+**RequireRole.tsx -- Add dynamic fallback path support:**
+
+Per user decision (CONTEXT.md lines 17, 39), well-related routes must redirect to the well detail page (`/wells/:id`), not the map page. The current `RequireRole` only accepts a static `fallbackPath` string and has no access to URL params. Enhance it to support a function-based fallback.
+
+1. Add `useParams` import from `react-router`.
+2. Widen the `fallbackPath` prop type from `string` to `string | ((params: Record<string, string | undefined>) => string)`.
+3. Inside the component, call `const params = useParams();` (safe to call unconditionally -- returns empty object when no params).
+4. When computing the redirect path, resolve the fallback: `const resolvedPath = typeof fallbackPath === 'function' ? fallbackPath(params) : fallbackPath;`
+5. Use `resolvedPath` in the `<Navigate to={resolvedPath} replace />`.
+
+Updated interface:
+```tsx
+interface RequireRoleProps {
+  action: Action;
+  fallbackPath?: string | ((params: Record<string, string | undefined>) => string);
+  children?: React.ReactNode;
+}
+```
+
+This is backward-compatible -- existing static `fallbackPath="/"` usage (subscription route) continues to work unchanged.
+
 **App.tsx route guards:**
 
 Wrap three routes with `RequireRole` layout guards (same pattern as the existing `/subscription` guard):
 
-1. `/wells/:id/edit` -- `RequireRole action="edit_well"` with fallbackPath="/"
-2. `/wells/:id/allocations` -- `RequireRole action="manage_allocations"` with fallbackPath="/"
-3. `/users` -- `RequireRole action="manage_users"` with fallbackPath="/"
+1. `/wells/:id/edit` -- `RequireRole action="edit_well"` with dynamic fallback:
+   ```tsx
+   <Route element={<RequireRole action="edit_well" fallbackPath={(params) => `/wells/${params.id}`} />}>
+     <Route path="/wells/:id/edit" element={<WellEditPage />} />
+   </Route>
+   ```
+2. `/wells/:id/allocations` -- `RequireRole action="manage_allocations"` with dynamic fallback:
+   ```tsx
+   <Route element={<RequireRole action="manage_allocations" fallbackPath={(params) => `/wells/${params.id}`} />}>
+     <Route path="/wells/:id/allocations" element={<WellAllocationsPage />} />
+   </Route>
+   ```
+3. `/users` -- `RequireRole action="manage_users"` with static fallback (no well context):
+   ```tsx
+   <Route element={<RequireRole action="manage_users" />}>
+     <Route path="/users" element={<UsersPage />} />
+   </Route>
+   ```
 
-Use static fallbackPath="/" (map page) for all three. Per user decision, redirect is silent with no toast. The `RequireRole` component already returns null during loading and redirects when unauthorized -- no changes needed to RequireRole itself.
+Per user decision, redirect is silent with no toast. Keep `/wells/:id` (detail page) unguarded -- accessible to all roles.
 
-Replace the existing unguarded route lines:
-```tsx
-<Route path="/users" element={<UsersPage />} />
-```
-with:
-```tsx
-<Route element={<RequireRole action="manage_users" />}>
-  <Route path="/users" element={<UsersPage />} />
-</Route>
-```
-
-And similarly for `/wells/:id/edit` and `/wells/:id/allocations`. Keep `/wells/:id` (detail page) unguarded -- accessible to all roles.
+**Important:** The `RequireRole` layout route wrapping `/wells/:id/edit` must receive the `:id` param. In React Router v7, a layout route wrapping a child with params can access those params via `useParams()` because route matching resolves params from the full matched path. Verify this works by confirming `useParams()` inside the `RequireRole` layout returns `{ id: "..." }` when matching `/wells/:id/edit`.
 
 **SideMenu.tsx Users nav item:**
 
@@ -137,8 +166,8 @@ to:
 { label: 'Users', icon: UsersIcon, path: '/users', requiredAction: 'manage_users' },
 ```
   </action>
-  <verify>Run `npx tsc -b --noEmit` -- zero errors. Verify App.tsx has 4 total RequireRole usages (subscription + 3 new). Verify SideMenu has 2 requiredAction entries (manage_farm + manage_users).</verify>
-  <done>Meter checkers are redirected to `/` when accessing well edit, allocations, or users routes via URL. Users nav item is hidden for meter checkers.</done>
+  <verify>Run `npx tsc -b --noEmit` -- zero errors. Verify App.tsx has 4 total RequireRole usages (subscription + 3 new). Verify the well edit and allocations guards use a function fallbackPath returning `/wells/${params.id}`. Verify SideMenu has 2 requiredAction entries (manage_farm + manage_users).</verify>
+  <done>Meter checkers navigating to `/wells/:id/edit` or `/wells/:id/allocations` are redirected to `/wells/:id` (well detail page). Meter checkers navigating to `/users` are redirected to `/` (map page). Users nav item is hidden for meter checkers. All redirects are silent (no toast).</done>
 </task>
 
 </tasks>
@@ -155,6 +184,8 @@ to:
 <success_criteria>
 - Permission matrix has exactly 12 actions matching CONTEXT.md specification
 - Three new route guards protect well edit, allocations, and users pages
+- Well-related route guards redirect to well detail page (`/wells/:id`), users route guard redirects to map (`/`)
+- RequireRole supports both static string and dynamic function fallbackPath
 - Users nav item hidden for meter checkers
 - TypeScript compiles cleanly
 </success_criteria>
