fix(23): revise plan 01 to address Mapbox CSS context compliance

--- a/.planning/phases/23-route-level-code-splitting-bundle-optimization/23-01-PLAN.md
+++ b/.planning/phases/23-route-level-code-splitting-bundle-optimization/23-01-PLAN.md
@@ -159,6 +159,10 @@ Style all error cards consistently: centered card with `bg-gray-800 rounded-xl p
 4. For routes inside `<AppLayout>`, wrap each `<Route element={...}>` similarly but with `<PageLoader />` (no fullScreen).
 5. Keep all existing route structure (RequireAuth, RequireOnboarded, RequireRole nesting) exactly as-is. Only change is: each leaf page element gets its own Suspense + error boundary wrapper.
 
+**Mapbox CSS loading** — Verify and preserve lazy-loading:
+
+Per CONTEXT.md decision ("Lazy-load Mapbox CSS with the map chunk, import in map wrapper component, not globally"): Mapbox CSS is already correctly imported in `src/components/MapView.tsx` (`import 'mapbox-gl/dist/mapbox-gl.css'`), NOT in any global location (index.css, main.tsx, or index.html). This is already lazy-loaded since MapView is part of the DashboardPage chunk which is code-split. **No changes needed** — just verify during implementation that no global Mapbox CSS import exists in `src/index.css` or `src/main.tsx`, and do NOT add one.
+
 **vite.config.ts** — Add readable chunk names:
 
 1. Add `chunkFileNames` to `rollupOptions.output`:
